--- a/web/Assets/Stylesheets/Main.css
+++ b/web/Assets/Stylesheets/Main.css
@@ -5,13 +5,16 @@
 
 /* Structure */
 .container {
-  background-color: rgba(0,0,0,0.25);
+  background-color: rgba(0,0,0,0.035);
   margin: auto;
-  width: 80;
+  width: 80%;
 }
 
 /* Content */
 h4 {
   color: #555;
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
+  font-size: 1.75em;
+  font-weight: 300;
+  text-align: center;
 }
