--- a/web/Assets/Stylesheets/Main.css
+++ b/web/Assets/Stylesheets/Main.css
@@ -3,10 +3,26 @@
     Sunday, 3 May, 2015
     Alexander Rhett Crammer  */
 
+/* Basic Reset */
+* {
+  font-family: "Helvetica Neue", "Helvetica", sans-serif;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+label[for] {
+  cursor: pointer;
+}
+
 /* Structure */
-.container {
+body {
   background-color: rgba(0,0,0,0.035);
+}
+
+.container {
   margin: auto;
+  text-align: center;
   width: 80%;
 }
 
@@ -16,5 +32,122 @@ h4 {
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 1.75em;
   font-weight: 300;
+  margin-top: 5%;
   text-align: center;
+}
+
+/* Links */
+a {
+  font-size: 0.95em;
+  letter-spacing: 0.5px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 125ms;
+}
+
+a:link {
+  color: blueviolet;
+}
+
+a:visited {
+  color: blueviolet;
+}
+
+a:hover {
+  color: #A94DFF;
+  text-decoration: underline;
+}
+
+a:active {
+  color: #522080;
+}
+
+/* Buttons */
+input[type="text"] {
+  font-family: "Georgia", "Times New Roman", serif;
+  font-size: 1.25em;
+  font-style: italic;
+  padding: 15px;
+  width: 20%;
+}
+
+input[type="button"], input[type="submit"], button, a.btn {
+  background-color: blueviolet;
+  border: 2px solid blueviolet;
+  border-radius: 35px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  letter-spacing: 0.5px;
+  outline: none;
+  padding: 10px 16.5px;
+  transition: background-color 125ms;
+}
+
+input[type="button"]:hover, input[type="submit"]:hover, button:hover, a.btn:hover {
+  background-color: #A94DFF;
+  border-color: #A94DFF;
+}
+
+input[type="button"]:active, input[type="submit"]:active, button:active, a.btn:active {
+  background-color: #522080;
+  border-color: #522080;
+}
+
+ul, ol {
+  list-style-type: none;
+  margin: 2.5%;
+}
+
+ul a:link, ul a:visited {
+  color: blueviolet;
+  font-size: 1.35em;
+  text-decoration: none;
+  transition: all 100ms;
+}
+
+ul a:hover {
+  background-color: transparent;
+  color: #A94DFF;
+}
+
+ul a:active {
+  color: #522080;
+}
+
+/* Form Fields */
+input {
+  margin: 2.5% 0 1%;
+}
+
+input[type="text"] {
+  font-family: "Georgia", "Times New Roman", serif;
+  font-size: 1.25em;
+  font-style: italic;
+  letter-spacing: 0.75px;
+  padding: 15px;
+  width: 20%;
+}
+
+input[type="button"], input[type="submit"], button, a.btn {
+  background-color: blueviolet;
+  border: 2px solid blueviolet;
+  border-radius: 35px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  letter-spacing: 0.5px;
+  outline: none;
+  padding: 10px 16.5px;
+  transition: background-color 125ms;
+}
+
+input[type="button"]:hover, input[type="submit"]:hover, button:hover, a.btn:hover {
+  background-color: #A94DFF;
+  border-color: #A94DFF;
+}
+
+input[type="button"]:active, input[type="submit"]:active, button:active, a.btn:active {
+  background-color: #522080;
+  border-color: #522080;
 }
