--- a/web/Assets/Stylesheets/Main.css
+++ b/web/Assets/Stylesheets/Main.css
@@ -32,7 +32,7 @@ h4 {
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 1.75em;
   font-weight: 300;
-  margin: 5% auto;
+  margin: 5% auto 10%;
   text-align: center;
 }
 
@@ -49,7 +49,7 @@ ul, ol {
 
 ul a:link, ul a:visited {
   color: blueviolet;
-  font-size: 1.15em;
+  font-size: 0.9em;
   text-decoration: none;
   transition: all 100ms;
 }
@@ -166,4 +166,15 @@ input[type="button"]:hover, input[type="submit"]:hover, button:hover, a.btn:hove
 input[type="button"]:active, input[type="submit"]:active, button:active, a.btn:active {
   background-color: #522080;
   border-color: #522080;
+}
+
+.well {
+  background-color: rgba(255,255,255,0.4);
+  border: 2px solid rgba(0,0,0,0.25);
+  border-radius: 5px;
+  color: #555;
+  font-family: monospace;
+  padding: 50px 15px;
+  margin: 5% auto;
+  width: 30%;
 }
